Add 'Sort class' and 'sortMethod'.

--- a/test/test.html
+++ b/test/test.html
@@ -42,6 +42,40 @@
           </tr>
         </tbody>
       </table>
+      <ul class="sort">
+        <li>nbc</li>
+        <li>zxy</li>
+        <li>bbc</li>
+        <li>mbc</li>
+        <li>abc</li>
+        <li>fox</li>
+      </ul>
+      <table class="sort">
+        <thead>
+          <tr>
+            <th>String</th>
+            <th data-sort-type="number">Number</th>
+            <th data-sort-type="date">Date</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Nora</td>
+            <td data-sort-value="13">Thirteen</td>
+            <td>2017-10-06</td>
+          </tr>
+          <tr>
+            <td>Owen</td>
+            <td data-sort-value="100">One hundred</td>
+            <td>2003-10-27</td>
+          </tr>
+          <tr>
+            <td>James</td>
+            <td data-sort-value="0">Zero</td>
+            <td>1444-05-01</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
     <script src="../node_modules/mocha/mocha.js"></script>
     <script src="../node_modules/chai/chai.js"></script>
