--- a/test/test.html
+++ b/test/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Mocha Tests</title>
+    <title>ElementUtil Tests</title>
     <link rel="stylesheet" href="../node_modules/mocha/mocha.css">
     <style>
       #mocha {
