Fix util method "toggleShow()".

--- a/test/test.html
+++ b/test/test.html
@@ -76,6 +76,7 @@
           </tr>
         </tbody>
       </table>
+      <div class="show-target" style="display: none;">Hello</div>
     </div>
     <script src="../node_modules/mocha/mocha.js"></script>
     <script src="../node_modules/chai/chai.js"></script>
