--- a/test/test.html
+++ b/test/test.html
@@ -16,6 +16,7 @@
   <body>
     <div id="mocha"></div>
     <div id="test">
+      <span class="inside"></span>
       <table class="filter">
         <thead>
           <tr>
