Fix compatibility problem in utilMethods.show().

--- a/test/test.html
+++ b/test/test.html
@@ -85,6 +85,10 @@
       mocha.setup('bdd');
     </script>
 
+    <!-- polyfill -->
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js"></script>
+
     <!-- load code you want to test here -->
     <script src="../dist/element-util.js"></script>
     <!-- load your test files here -->
