--- a/test/test.html
+++ b/test/test.html
@@ -91,8 +91,12 @@
 
     <!-- load code you want to test here -->
     <script src="../dist/element-util.js"></script>
+
     <!-- load your test files here -->
-    <script src="element-util.test.js"></script>
+    <script src="base.spec.js"></script>
+    <script src="util.spec.js"></script>
+    <script src="element-filter.spec.js"></script>
+    <script src="element-sorter.spec.js"></script>
     <script>
       mocha.run();
     </script>
